--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.0.6",
     "vue-loader": "^14.2.1",
+    "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.1.1",
