--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.0.6",
     "vue-loader": "^14.2.1",
@@ -24,6 +25,8 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   }
 }
