--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.0.6",
     "vue-loader": "^14.2.1",
